--- a/resistor-color/package.json
+++ b/resistor-color/package.json
@@ -16,6 +16,8 @@
     "babel-jest": "^24.5.0",
     "eslint": "^5.15.3",
     "eslint-plugin-import": "^2.16.0",
+    "handlebars": ">=4.1.2",
+    "js-yaml": ">=3.13.1",
     "jest": "^24.5.0"
   },
   "jest": {
